objects/SFDC_Project__c.object
<CustomObject>
    <description>Project Management</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Accrued_Revenue__c</fullName>
        <formula>IF(AND(OR(ISPICKVAL(SFDC_Project_Status__c, &apos;Sales&apos;) , ISPICKVAL(SFDC_Project_Status__c, &apos;Ready to Handoff&apos;), ISPICKVAL(SFDC_Project_Status__c, &apos;On Hold&apos;), ISPICKVAL(SFDC_Project_Status__c, &apos;Dead&apos;)), ISPICKVAL(SFDC_Project_Stage__c, &apos; &apos;)), Opportunity__r.Total_Contract_Price__c *0, 
IF(AND(ISPICKVAL(SFDC_Project_Status__c, &apos;Design&apos;), ISPICKVAL(SFDC_Project_Stage__c, &apos;&apos;)), Opportunity__r.Total_Contract_Price__c *0.01, 
IF(AND(OR(ISPICKVAL(SFDC_Project_Status__c, &apos;Plans Ready&apos;) , ISPICKVAL(SFDC_Project_Status__c, &apos;Permitted&apos;)), ISPICKVAL(SFDC_Project_Stage__c, &apos;&apos; ) ), Opportunity__r.Total_Contract_Price__c *0.02, 
IF(AND(OR(ISPICKVAL(SFDC_Project_Status__c, &apos;Scheduled&apos;) , ISPICKVAL(SFDC_Project_Status__c, &apos;In Progress&apos;)), ISPICKVAL(SFDC_Project_Stage__c, &apos;&apos; ) ), Opportunity__r.Total_Contract_Price__c *0.03, 
IF(ISPICKVAL(SFDC_Project_Stage__c, &apos;Roof Mounts/Rough In&apos; ), Opportunity__r.Total_Contract_Price__c *0.06, 
IF(ISPICKVAL(SFDC_Project_Stage__c, &apos;Racking In&apos; ), Opportunity__r.Total_Contract_Price__c *0.22, 
IF(ISPICKVAL(SFDC_Project_Stage__c, &apos;Modules In&apos; ), Opportunity__r.Total_Contract_Price__c *0.94, 
IF(ISPICKVAL(SFDC_Project_Stage__c, &apos;Elec. Inspec. Pending&apos; ), Opportunity__r.Total_Contract_Price__c *0.94, 
IF(ISPICKVAL(SFDC_Project_Stage__c, &apos;Inspection Pending&apos; ), Opportunity__r.Total_Contract_Price__c *0.96, 
IF(ISPICKVAL(SFDC_Project_Stage__c, &apos;Completed&apos; ), Opportunity__r.Total_Contract_Price__c *0.99, 
IF(ISPICKVAL(SFDC_Project_Status__c, &apos;Sales Complete&apos; ), Opportunity__r.Total_Contract_Price__c , 
IF(ISPICKVAL(SFDC_Project_Status__c, &apos;Completed&apos; ), Opportunity__r.Total_Contract_Price__c , 0))))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Accrued Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>App_Fee_Paid_By__c</fullName>
        <description>Indicates who paid the rebate application fee.</description>
        <label>App Fee Paid By</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                    <default>true</default>
                    <label>N/A</label>
                </value>
                <value>
                    <fullName>Host Customer</fullName>
                </value>
                <value>
                    <fullName>System Owner</fullName>
                </value>
                <value>
                    <fullName>Borrego Solar</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approval_Date_Federal__c</fullName>
        <label>Approval Date (Federal)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>As_Built_Completed__c</fullName>
        <label>As-Built Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Average_High_Temp__c</fullName>
        <label>Average High Temp</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Status_Feasibility__c</fullName>
        <label>Billing Status (Feasibility)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Retainer Paid</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Borrego_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Has Borrego received the federal rebate yet?</description>
        <label>Borrego Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Borrego_Total_Project_Costs__c</fullName>
        <label>Borrego Total Project Costs</label>
        <summarizedField>PCost__c.Cost_to_Borrego__c</summarizedField>
        <summaryForeignKey>PCost__c.Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Branch__c</fullName>
        <label>Branch</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Berkeley</fullName>
                </value>
                <value>
                    <fullName>Boston</fullName>
                </value>
                <value>
                    <fullName>Commercial</fullName>
                </value>
                <value>
                    <fullName>Orange County</fullName>
                </value>
                <value>
                    <fullName>San Diego</fullName>
                </value>
                <value>
                    <fullName>Silicon Valley</fullName>
                </value>
                <value>
                    <fullName>Sonoma County</fullName>
                </value>
                <value>
                    <fullName>Mid Atlantic</fullName>
                </value>
                <value>
                    <fullName>Puerto Rico</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Building_Access_Code__c</fullName>
        <label>Access Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Building_Code__c</fullName>
        <label>Building Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CD_Baseline_Date__c</fullName>
        <label>CD Baseline Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CD_Forecast_Release_Date__c</fullName>
        <label>CD Forecast Release Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CD_On_Hold_Days__c</fullName>
        <description>next to CD Baseline in Flex table</description>
        <label>CD On Hold Days</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CD_count__c</fullName>
        <description>this will be used for reporting only</description>
        <formula>IF(ISBLANK(  CD_on_time__c  ) || (CD_on_time__c &gt;= 0 &amp;&amp;    CD_Baseline_Date__c   &lt; DATE(2012,08,01)) ,NULL,1)</formula>
        <label>CD count</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CD_on_time__c</fullName>
        <formula>IF(ISBLANK(Const_Set_Completed__c ) &amp;&amp; (CD_Baseline_Date__c &lt; TODAY() - 15),0,
IF(Const_Set_Completed__c -  CD_Baseline_Date__c  &lt; 15 &amp;&amp;  CD_Baseline_Date__c &gt; DATE(2012,08,01),1,
IF(ISBLANK(Const_Set_Completed__c ) ||  ISBLANK(CD_Baseline_Date__c ),Null,0)))</formula>
        <label>CD on time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Closeout_Date__c</fullName>
        <label>Closeout Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Commencement_Date__c</fullName>
        <label>Commencement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Comments_on_Budget__c</fullName>
        <label>Comments on Budget</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Comments_on_Schedule__c</fullName>
        <label>Comments on Schedule</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commissioning_Agent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Commissioning Agent</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Projects2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Commissioning_Date__c</fullName>
        <label>Commissioning Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Commissioning_Status__c</fullName>
        <label>Commissioning Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                    <default>true</default>
                    <label>Not Started</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Submitted to QA</fullName>
                </value>
                <value>
                    <fullName>First Stage Approved</fullName>
                </value>
                <value>
                    <fullName>Pending Completion</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Corrective Action Required</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cons_Set_Days_from_Baseline_Date__c</fullName>
        <formula>IF( ISBLANK( Const_Set_Completed__c),  CD_Baseline_Date__c-  TODAY(), 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cons Set- Days from Baseline Date</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Const_End_to_PTO_Date__c</fullName>
        <formula>PTO_Date__c - SFDC_Project_End_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Const End to PTO Date</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Const_Review_Baseline__c</fullName>
        <label>Const Review Baseline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Const_Review_Date__c</fullName>
        <label>Const Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Const_Set_Completed__c</fullName>
        <label>Const Set Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Const_Set_to_Const_Start__c</fullName>
        <formula>SFDC_Project_Start_Date__c - Const_Set_Completed__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Const Set to Const Start</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Construction_Stage_Change_Date__c</fullName>
        <label>Construction Stage Change Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Contact_Established_Date__c</fullName>
        <label>Contact Established Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>R00N300000021XpoEAE</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contingent_Upon_Commencement__c</fullName>
        <label>Contingent Upon Commencement?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_Production_Requirement__c</fullName>
        <label>Contract Production Requirement</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contract_Signed_Date__c</fullName>
        <formula>Opportunity__r.CloseDate</formula>
        <label>Contract Signed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cost_To_Borrego_Design__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Cost To Borrego (Design)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cost_To_Borrego_Feasibility__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Cost To Borrego  (Feasibility)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cost_To_Borrego_Procurement__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Cost To Borrego (Procurement)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cost_to_Customer_Design__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Cost to Customer (Design)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cost_to_Customer_Feasibility__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Cost to Customer (Feasibility)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cost_to_Customer_Procurement__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Cost to Customer (Procurement)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Create_Assets__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Set by trigger ptoReceived.  If set, OK to create asset records.</description>
        <label>Create Assets</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DAS_Vendor__c</fullName>
        <label>DAS Vendor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fat Spaniel</fullName>
                </value>
                <value>
                    <fullName>Power Dash</fullName>
                </value>
                <value>
                    <fullName>EnergyRE</fullName>
                </value>
                <value>
                    <fullName>SunEdison</fullName>
                </value>
                <value>
                    <fullName>SunnyPortal</fullName>
                </value>
                <value>
                    <fullName>Enphase</fullName>
                </value>
                <value>
                    <fullName>Deck</fullName>
                </value>
                <value>
                    <fullName>Solectria</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Also Energy</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Data_Monitoring_In__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Data Monitoring In</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Data_Monitoring_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Data Monitoring Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_First_Expected__c</fullName>
        <label>Date First Expected</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_Outstanding_Interconnection__c</fullName>
        <formula>IF(TEXT(Interconnection_Status__c ) &lt;&gt; &apos;Permission to Operate&apos;, Today() - Interconn_Date__c, null)</formula>
        <label>Days Outstanding - Interconnection</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Outstanding_Rebate__c</fullName>
        <formula>IF(TEXT(Rebate_Status__c) &lt;&gt; &apos;Rebate Received&apos;, Today() - Rebate_Date__c, null)</formula>
        <label>Days Outstanding - Rebate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_at_Current_Construction_Stage__c</fullName>
        <formula>NOW() - Construction_Stage_Change_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days at Current Construction Stage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_at_Current_Project_Status__c</fullName>
        <formula>NOW() - Project_Stage_Change_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days at Current Project Status</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_in_Current_Design_Stage__c</fullName>
        <formula>NOW() - Design_Stage_Change_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days in Current Design Stage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deadline_Date__c</fullName>
        <label>Deadline Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deadline_Description__c</fullName>
        <label>Deadline Description</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Delivery_Date_Design__c</fullName>
        <label>Delivery Date (Design)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Delivery_Date_Feasibility__c</fullName>
        <label>Delivery Date (Feasibility)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Delivery_Date_Procurement__c</fullName>
        <label>Delivery Date (Procurement)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Design_High_Temp__c</fullName>
        <label>Design High Temp</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Design_Low_Temp__c</fullName>
        <label>Design Low Temp</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Design_Notes__c</fullName>
        <label>Design Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Design_Stage_Change_Date__c</fullName>
        <label>Design Stage Change Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Design_Stage__c</fullName>
        <label>Design Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>50% Design</fullName>
                    <default>true</default>
                    <label>50% Design</label>
                </value>
                <value>
                    <fullName>Permit Set</fullName>
                </value>
                <value>
                    <fullName>Construction Set</fullName>
                </value>
                <value>
                    <fullName>As Built</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Design_Subcontractor__c</fullName>
        <label>Design Subcontractor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Nalu</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>none</fullName>
                    <default>true</default>
                    <label>none</label>
                </value>
                <value>
                    <fullName>LJT- East Coast</fullName>
                </value>
                <value>
                    <fullName>LJT- West Coast</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Design_Time_Design_Start_to_50__c</fullName>
        <formula>( X50_Set_Completed__c - Internal_NTP_Date__c )/7*5</formula>
        <label>Design Time- Design Start to 50%</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Design_Time_Handoff_to_Design_Start__c</fullName>
        <formula>(Internal_NTP_Date__c - Hand_off_Date__c)/7*5</formula>
        <label>Design Time- Handoff to Design Start</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Design_Time_Permit_to_Const_Set__c</fullName>
        <formula>(Const_Set_Completed__c - Permit_Set_Completed__c)/7 *5</formula>
        <label>Design Time- Permit to Const Set</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Design_Time_Start_to_Permit__c</fullName>
        <formula>(Permit_Set_Completed__c - Internal_NTP_Date__c )/7*5</formula>
        <label>Design Time- Start to Permit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Design_Time_Total__c</fullName>
        <description>Time between Design Start Time and Construction Set Complete</description>
        <formula>(Const_Set_Completed__c -Internal_NTP_Date__c)/7*5</formula>
        <label>Design Time-Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <description>Rebate section - due date.</description>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EC__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>EC</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Projects1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EE__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Electrical Engineer- DO NOT USE</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Electrical_Engineer__c</fullName>
        <label>Electrical Engineer</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Excluded_in_Job_Cost_Reports__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Excluded in Job Cost Reports</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Expected_Amount_Federal__c</fullName>
        <description>Expected amount of federal rebate.</description>
        <inlineHelpText>Expected amount of federal rebate.</inlineHelpText>
        <label>Expected Amount (Federal)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Expected_Rebate__c</fullName>
        <description>Automatically populated from the associated Opportunity record Expected Rebate field.</description>
        <formula>Opportunity__r.Expected_Rebate__c</formula>
        <inlineHelpText>Automatically populated from the associated Opportunity record Expected Rebate field.</inlineHelpText>
        <label>Expected Rebate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Expected_Yearly_Production_in_kWh__c</fullName>
        <label>Expected Yearly Production in kWh</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expenses__c</fullName>
        <label>Borrego Total Expenses</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Exposure_Category__c</fullName>
        <label>Exposure Category</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Extra_Payment_Amount__c</fullName>
        <label>Extra Payment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Extra_Payment_Date__c</fullName>
        <label>Extra Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fed_Rebate_Status__c</fullName>
        <label>Fed Rebate Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Project Incomplete</fullName>
                    <default>true</default>
                    <label>Project Incomplete</label>
                </value>
                <value>
                    <fullName>Gathering Paperwork</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Customer Received</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Final_Amount_Federal__c</fullName>
        <description>Final amount of federal rebate.</description>
        <inlineHelpText>Final amount of federal rebate.</inlineHelpText>
        <label>Final Amount (Federal)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Final_Contract_PriceProject__c</fullName>
        <formula>Opportunity__r.Final_Contract_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Final Contract Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Final_KW__c</fullName>
        <description>Rebate section - final KW.</description>
        <label>Final KW</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Final_Rebate_Amount__c</fullName>
        <label>Final Rebate Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Final_approved_QC__c</fullName>
        <description>Hidden date field that will be updated when when the commissioning status = approved</description>
        <label>Final approved QC</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Financing__c</fullName>
        <formula>TEXT( Opportunity__r.Financing__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Financing</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fixed_Cost_Feasibility__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, project is fixed cost.</description>
        <inlineHelpText>Check to make this project Fixed Cost.</inlineHelpText>
        <label>Fixed Cost (Feasibility)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Foreman__c</fullName>
        <label>Foreman</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Frequency_days__c</fullName>
        <label>Frequency (days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Grant_Assigned_To_Federal__c</fullName>
        <description>Indicate who the federal grant was assigned to.</description>
        <inlineHelpText>Indicate who the federal grant was assigned to.</inlineHelpText>
        <label>Grant Assigned To (Federal)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Borrego</fullName>
                </value>
                <value>
                    <fullName>Customer</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>GLC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GroSolar__c</fullName>
        <formula>Account__r.GroSolar__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GroSolar</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hand_off_Date__c</fullName>
        <label>Hand off Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Handoff_Completed_and_Approved__c</fullName>
        <label>Handoff Completed and Approved</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Handoff_Was_Scheduled__c</fullName>
        <description>Hidden date field that is updated when the O&amp;M Handoff Status = Scheduled</description>
        <label>Handoff Was Scheduled</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Handoff_to_Construction_Start__c</fullName>
        <formula>SFDC_Project_Start_Date__c-Hand_off_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Handoff to Construction Start</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Has_Budget__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Budget</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hours_Remaining__c</fullName>
        <formula>(Opportunity__r.Expected_Install_Days__c * 40) -  Install_Hours__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hours Remaining</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ICF_Approval_Date__c</fullName>
        <label>ICF Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ICF_Submission_Date__c</fullName>
        <label>ICF Submission Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Importance_Factor_Architect_Engineer__c</fullName>
        <label>Importance Factor (Architect/Engineer)</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incentive__c</fullName>
        <description>Rebate incentive.</description>
        <label>Incentive</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Initially_Submitted_to_QA__c</fullName>
        <description>Hidden date field that is updated when the submit to QA check box = true</description>
        <label>Initially Submitted to QA</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Install_Hours__c</fullName>
        <label>Install Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Install_Rate_kW_Day__c</fullName>
        <formula>(WATTS_STC__c/1000) / ( Install_Hours__c   /40)</formula>
        <label>Install Rate (kW/Day)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Interconn_Date__c</fullName>
        <label>Interconnection Status Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Interconnection_Status__c</fullName>
        <label>Interconnection Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Initial Paperwork Submitted</fullName>
                </value>
                <value>
                    <fullName>Application Complete</fullName>
                </value>
                <value>
                    <fullName>Permission to Operate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Internal_NTP_Baseline__c</fullName>
        <description>added to the Project Flex table in the Design Tab</description>
        <label>Internal NTP Baseline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Internal_NTP_Date__c</fullName>
        <label>Internal NTP Date</label>
        <type>Date</type>
    </fields>
</CustomObject>